# sprigs

./: Cargo.toml  pytest.ini
sprigrs/: __init__.py
sprigs/: __init__.py
src/: intervals.rs  lib.rs
tests/: test_dictutils.py  test_intervals.py  test_sprigrs.py  test_sprigs.py  test_toys.py
